# ai-facemaker

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: about.html  app.js  aws-config.js  guide.html  index.html  setup.html  styles.css
src/ai_facegen/: __init__.py  cache.py  cli.py  client.py  exceptions.py  processing.py  prompt.py  result.py  specs.py
src/ai_facegen/models/: __init__.py  base.py  sd35.py  sdxl.py  titan.py
tests/: __init__.py  conftest.py  test_cache.py  test_cli.py  test_client.py  test_processing.py  test_prompt.py  test_specs.py
